# rules_python

./: MODULE.bazel
.bcr/: config.yml  presubmit.yml  template.metadata.json
.github/workflows/: workspace_snippet.sh
docs/: pip_repository.md
examples/bzlmod/: MODULE.bazel  __init__.py  requirements_lock.txt
python/: extensions.bzl
python/pip_install/: pip_repository.bzl
python/pip_install/extract_wheels/: parse_requirements_to_bzl.py
